fix header text alignment

--- a/public/sass/course.scss
+++ b/public/sass/course.scss
@@ -44,6 +44,7 @@ $white: #F5F5F5;
     padding: 1px;
     margin: 0;
     z-index: 2;
+    margin-top: 2px;
 }
 
 .course-header-background {
